--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -36,14 +36,6 @@
     </item>
    </layout>
   </widget>
-  <widget class="QToolBar" name="mainToolBar">
-   <attribute name="toolBarArea">
-    <enum>TopToolBarArea</enum>
-   </attribute>
-   <attribute name="toolBarBreak">
-    <bool>false</bool>
-   </attribute>
-  </widget>
   <widget class="QStatusBar" name="statusBar"/>
   <widget class="QMenuBar" name="menuBar">
    <property name="geometry">
@@ -56,15 +48,31 @@
    </property>
    <widget class="QMenu" name="menuSettings">
     <property name="title">
-     <string>Settings</string>
+     <string>&amp;File</string>
     </property>
     <addaction name="actionShow_Settings"/>
    </widget>
    <addaction name="menuSettings"/>
   </widget>
+  <widget class="QToolBar" name="toolBar">
+   <property name="windowTitle">
+    <string>toolBar</string>
+   </property>
+   <attribute name="toolBarArea">
+    <enum>TopToolBarArea</enum>
+   </attribute>
+   <attribute name="toolBarBreak">
+    <bool>false</bool>
+   </attribute>
+   <addaction name="actionShow_Settings"/>
+  </widget>
   <action name="actionShow_Settings">
+   <property name="icon">
+    <iconset resource="resources.qrc">
+     <normaloff>:/images/Settings-2-icon.png</normaloff>:/images/Settings-2-icon.png</iconset>
+   </property>
    <property name="text">
-    <string>Show Settings</string>
+    <string>Show &amp;Settings</string>
    </property>
   </action>
  </widget>
