--- a/resources.qrc
+++ b/resources.qrc
@@ -1,5 +1,6 @@
 <RCC>
     <qresource prefix="/">
         <file>images/rocket.png</file>
+        <file>images/Settings-2-icon.png</file>
     </qresource>
 </RCC>
