--- a/widgets/spanshroutewidget.ui
+++ b/widgets/spanshroutewidget.ui
@@ -91,7 +91,7 @@
         <string/>
        </property>
        <property name="icon">
-        <iconset resource="resources.qrc">
+        <iconset resource="../resources.qrc">
          <normaloff>:/images/swap.png</normaloff>:/images/swap.png</iconset>
        </property>
       </widget>
@@ -235,7 +235,7 @@
         <string/>
        </property>
        <property name="icon">
-        <iconset resource="resources.qrc">
+        <iconset resource="../resources.qrc">
          <normaloff>:/images/up-arrow.png</normaloff>:/images/up-arrow.png</iconset>
        </property>
       </widget>
@@ -281,7 +281,7 @@
   <tabstop>pushButton</tabstop>
  </tabstops>
  <resources>
-  <include location="resources.qrc"/>
+  <include location="../resources.qrc"/>
  </resources>
  <connections/>
 </ui>
