--- a/resources.qrc
+++ b/resources.qrc
@@ -5,5 +5,6 @@
         <file>images/swap.png</file>
         <file>images/up-arrow.png</file>
         <file>images/Actions history clear.png</file>
+        <file>images/Circle remove.png</file>
     </qresource>
 </RCC>
